# lab_oop_3

./: CMakeLists.txt  Figure.hpp  Pentagon.cpp  Pentagon.hpp  Rombus.cpp  Rombus.hpp  Trapezoid.cpp  Trapezoid.hpp  array.cpp  array.hpp  main.cpp  test.cpp
